[metadata]
name = gkeeper
author = Cloudscaling
author_email = pd@cloudscaling.com
home-page = http://www.cloudscaling.com
summary = Git based version manager
license = GPLv3
platform = POSIX
requires-python = >= 2.6
classifier =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: System Administrators
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_index_modules = true
